--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\abhin\\OneDrive\\Desktop\\MlProjects\\project1\\env\\python.exe"
+    "python.pythonPath": "C:\\Users\\abhin\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
